# what-the-geck

./: .gitignore
cross-platform/: Cargo.toml
cross-platform/crates/fir/: Cargo.toml
cross-platform/crates/fir-geckscript/: Cargo.toml  build.rs
cross-platform/crates/fir-geckscript/src/: ___pipeline.rs  api.rs  diagnostics.rs  grammar-patch.json  grammar.rs  impls.rs  lib.rs  tests.rs  tree_sitter.rs
cross-platform/crates/fir-geckscript/src/lower/: ascii.rs  context.rs  gather_metadata.rs  mod.rs
cross-platform/crates/fir-geckscript/src/parse/: error.rs
cross-platform/crates/fir-nvse/: Cargo.toml
cross-platform/crates/fir-nvse/src/: lib.rs
cross-platform/crates/fir-wasm/: Cargo.toml  out.wat
cross-platform/crates/fir-wasm-runtime/: Cargo.toml
cross-platform/crates/fir-wasm-runtime/src/: lib.rs
cross-platform/crates/fir-wasm/src/: context.rs  data.rs  generate.rs  lib.rs
cross-platform/crates/fir-wasm/src/diagnostics/: failures.rs
cross-platform/crates/fir/src/: api.rs  def.rs  impls.rs  span.rs  typeck.rs  utils.rs
cross-platform/crates/geckstractor/: Cargo.toml
cross-platform/crates/geckstractor/src/: main.rs
cross-platform/crates/nifertiti/: Cargo.toml
cross-platform/crates/nv-types/src/: lib.rs
cross-platform/crates/nvlsp/: Cargo.toml
cross-platform/crates/nvlsp/editors/vscode/: package.json
cross-platform/crates/nvlsp/editors/vscode/syntaxes/: geckscript.tmLanguage.json
cross-platform/crates/nvlsp/src/: compile.rs  context.rs  diagnostic.rs  main.rs  symbols.rs  utils.rs
cross-platform/crates/psyker/: Cargo.toml
cross-platform/crates/psyker/src/: lib.rs  read_utils.rs
cross-platform/crates/psyker/src/records/: experiment.rs  mod.rs
cross-platform/crates/psyker/src/records/data/: clas.rs  dial.rs  glob.rs  qust.rs  scpt.rs  tes4.rs
cross-platform/crates/psyker/src/records/view/: adapters.rs  mod.rs  parsers.rs
cross-platform/crates/scribe/: Cargo.toml
cross-platform/crates/scribe/examples/: cli.rs
cross-platform/crates/scribe/src/: common.rs  lib.rs  v104.rs
cross-platform/crates/tree-sitter-geckscript/: Cargo.toml  package.json  test.geck
cross-platform/crates/tree-sitter-geckscript/bindings/rust/: lib.rs
cross-platform/crates/tree-sitter-geckscript/queries/: errors.scm  highlights.scm  locals.scm  lower.scm  textobjects.scm
cross-platform/crates/tree-sitter-geckscript/src/: node-types.json  parser.c
cross-platform/fir/: Cargo.toml
cross-platform/fir-geckscript/: Cargo.toml
cross-platform/fir-geckscript/src/: grammar.rs  span.rs  tinygram.rs  tree_sitter.rs
cross-platform/fir-geckscript/src/ast/: build.rs  mod.rs
cross-platform/fir-geckscript/src/lower/: context.rs  gather_metadata.rs
cross-platform/fir-geckscript/src/parse/: _nvse.rs  mod.rs  tokens.rs
cross-platform/fir-nvse/: Cargo.toml
cross-platform/fir-nvse/src/: lib.rs
cross-platform/fir-wasm/: Cargo.toml  opt.wasm  out.wasm
cross-platform/fir-wasm/src/: _generate.rs  data.rs  mod.rs
cross-platform/fir-wasm/src/diagnostics/: failures.rs  mod.rs  warnings.rs
cross-platform/fir/src/: api.rs  def.rs  lib.rs  reporting.rs  typeck.rs
cross-platform/nv-types/: Cargo.toml
cross-platform/nvlsp/: Cargo.toml
cross-platform/nvlsp/editors/vscode/: CHANGELOG.md  README.md  pnpm-lock.yaml
cross-platform/nvlsp/editors/vscode/src/: extension.ts
cross-platform/nvlsp/src/: context.rs  diagnostic.rs  main.rs
cross-platform/psyker/src/: common.rs  format.rs
cross-platform/psyker/src/records/: define_data.rs  read_data.rs
cross-platform/psyker/src/records/data/: mod.rs  txst.rs
cross-platform/scribe/src/: common.rs  lib.rs  v104.rs
cross-platform/src/: main.rs
cross-platform/tree-sitter-geckscript/: .gitignore  binding.gyp  grammar.js
cross-platform/tree-sitter-geckscript/bindings/node/: binding.cc  index.js
cross-platform/tree-sitter-geckscript/queries/: indents.scm
cross-platform/tree-sitter-geckscript/src/: grammar.json
cross-platform/xtask/: Cargo.toml
cross-platform/xtask/src/: lib.rs  main.rs
cross-platform/xtask/src/generate_tree_sitter/: mod.rs
win32/: .gitignore  Cargo.toml
win32/dllwrapper/: main.c
win32/nvse/: Cargo.toml
win32/nvse-sys/: Cargo.toml
win32/nvse-sys/src/: bridge.rs  common.rs  forms.rs  lib.rs  plugins.rs  scripts.rs
