[workspace]
resolver = "2"

members = [
    "crates/fir",
    "crates/fir-wasm",
    "crates/fir-nvse",
    "crates/fir-geckscript",
    "crates/psyker",
    "crates/nvlsp",
    "crates/nv-types",
    "crates/scribe",
    "crates/fir-wasm-runtime",
    "xtask",
]
exclude = [
    "win32",
    "geckstractor",
]
