[package]
name = "fir-nvse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
binrw = "0.13.3"
fir = { version = "0.1.0", path = "../fir" }
hashbrown = "0.14.0"
indexmap = "2.0.0"
lazy_static = "1.4.0"
nv-types = { version = "0.1.0", path = "../nv-types" }
psyker = { version = "0.1.0", path = "../psyker" }
ron = "0.8.1"
