[package]
name = "fir-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
fir = { path = "../fir" }
hashbrown = "0.14.1"
indexmap = "2.0.0"
lazy_static = "1.4.0"
miette = "5.10.0"
thiserror = "1.0.47"
wasm-encoder = "0.32.0"
wasmparser = "0.112.0"

[dev-dependencies]
fir-geckscript = { path = "../fir-geckscript" }
