[package]
name = "fir-geckscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast-float = "0.2.0"
thiserror = "1.0.40"
unicase = "2.6.0"
nv-types = { path = "../nv-types" }
anyhow = "1.0.70"
rust-sitter = { path = "../../../../rust-sitter/runtime" }
fir = { "path" = "../fir" }
itertools = "0.11.0"
lazy_static = "1.4.0"
indexmap = "2.0.0"
derive_deref = "1.1.1"
ref-cast = "1.0.20"
miette = { version = "5.10.0", features = ["fancy"] }
hashbrown = "0.14.3"
colored = "2.1.0"

[features]
default = []

[build-dependencies]
xtask = { path = "../../xtask" }
anyhow = "1.0.70"

[dev-dependencies]
