[package]
name = "psyker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
binrw = "0.13.3"
flate2 = { version = "1.0.24", default-features = false, features = ["zlib-ng"] }
bitflags = { version = "2", features = ["serde"] }
derive_deref = "1.1.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8.32"
const-str = "0.5.4"
log = "0.4.21"
hashbrown = "0.14.3"

[dev-dependencies]
env_logger = "0.11.3"
